# bytesampler-cd

./: .gitignore  generate_cd.py  merge_shards.sh  pyproject.toml  run.sh  test.py
scripts/: populate_tokenizers.py
src/byte_sampling/: __init__.py  acpfuse_utils.py  byte_conditioning.py  byte_sampling.py  cpfuse_utils.py  distillation.py  radix_cache.py  streaming_added_tokens.py  streaming_bpe.py  streaming_pretok.py  utils.py
tests/: test_logprobs.py  test_streaming_byte_tree.py  test_token_slicer.py
